# pycapsule

./: .gitignore  LICENSE  README.md  README_zh.md  pack.py  pyproject.toml
example/: bootstrap.py
pycapsule/: __init__.py  __main__.py  analyzer.py  builder.py  cli.py  packer.py  spec.py
pycapsule/templates/: default.spec.json
src/: bootstrap.py  cleanup.c  config.h  launcher.c  launcher.c.bak
